# BattleShipwithAI

./: .gitignore  AiPlayer.cpp  AiPlayer.h  BattleShip.cpp  BattleShip.h  Board.cpp  Board.h  CMakeLists.txt  CheatingAiPlayer.cpp  CheatingAiPlayer.h  Config.cpp  Config.h  GameAttributes.cpp  GameAttributes.h  HumanPlayer.cpp  HumanPlayer.h  HuntDestroyAiPlayer.cpp  HuntDestroyAiPlayer.h  Makefile  Move.cpp  Move.h  Player.cpp  Player.h  RandomAiPlayer.cpp  RandomAiPlayer.h  ShipPlacement.cpp  ShipPlacement.h  Utility.cpp  Utility.h  input  input.txt  inputTemplate.txt  main.cpp
